--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-screens": "~2.15.2",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.3",
+    "react-navigation-header-buttons": "^9.0.0",
     "react-redux": "^7.2.2"
   },
   "devDependencies": {
