--- a/package.json
+++ b/package.json
@@ -8,27 +8,32 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/bottom-tabs": "^5.11.7",
-    "@react-navigation/drawer": "^5.12.3",
-    "@react-navigation/native": "^5.9.2",
-    "@react-navigation/stack": "^5.14.2",
-    "expo": "~40.0.0",
-    "expo-status-bar": "~1.0.3",
+    "@react-native-async-storage/async-storage": "^1.15.14",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.0.9",
+    "@react-navigation/drawer": "^6.1.8",
+    "@react-navigation/material-bottom-tabs": "^6.0.9",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/stack": "^6.0.11",
+    "expo": "^43.0.4",
+    "expo-status-bar": "1.1.0",
+    "firebase": "^9.6.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-gesture-handler": "~1.8.0",
-    "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "3.1.9",
-    "react-native-screens": "~2.15.2",
-    "react-native-web": "~0.13.12",
-    "react-navigation": "^4.4.3",
-    "react-navigation-header-buttons": "^9.0.0",
-    "react-redux": "^7.2.2"
+    "react-native": "0.64.3",
+    "react-native-gesture-handler": "1.10.2",
+    "react-native-paper": "^4.11.1",
+    "react-native-reanimated": "2.2.0",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "3.8.0",
+    "react-native-vector-icons": "^9.0.0",
+    "react-native-web": "^0.17.5",
+    "react-navigation": "^4.4.4",
+    "react-navigation-header-buttons": "^9.0.1",
+    "react-redux": "^7.2.6"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0"
+    "@babel/core": "^7.16.0"
   },
   "private": true
 }
