--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@react-navigation/material-bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
+    "axios": "^0.25.0",
     "expo": "^43.0.4",
     "expo-status-bar": "1.1.0",
     "firebase": "^9.6.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "0.64.3",
+    "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "1.10.2",
     "react-native-paper": "^4.11.1",
     "react-native-reanimated": "2.2.0",
@@ -30,7 +32,8 @@
     "react-native-web": "^0.17.5",
     "react-navigation": "^4.4.4",
     "react-navigation-header-buttons": "^9.0.1",
-    "react-redux": "^7.2.6"
+    "react-redux": "^7.2.6",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0"
